<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bk"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/atmname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atmname"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showatmname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showaddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bankname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bankname"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showbanknameEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showlatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showlongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/deposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deposit"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showdeposit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showcontact_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/contact_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_no"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/showcontact_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="@string/go" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>